@@ -49,11 +49,12 @@
  *  OSes (i.e. no special drivers required). It is boot protocol compatible, and thus
  *  works under compatible BIOS as if it was a native keyboard (e.g. PS/2).
  *  
- *  On start-up the system will automatically enumerate and function
- *  as a keyboard when the USB connection to a host is present. To use
- *  the keyboard example, manipulate the joystick to send the letters
- *  a, b, c, d and e. See the USB HID documentation for more information
- *  on sending keyboard event and key presses.
+ *  On start-up the system will automatically enumerate and function as a keyboard 
+ *  when the USB connection to a host is present. To use the keyboard example,
+ *  manipulate the joystick to send the letters a, b, c, d and e. See the USB HID
+ *  documentation for more information on sending keyboard event and key presses. Unlike
+ *  other LUFA Keyboard demos, this example shows explicitly how to send multiple keypresses
+ *  inside the same report to the host.
  *
  *  \section SSec_Options Project Options
  *  
